BCC-01-req-analysis-and-domain-model

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brickken-template",
+  "name": "technical-test-template",
   "description": "Template to build services",
   "version": "0.0.1",
   "private": true,
